feat: Add node selector support for stackgres pods

--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/sgcluster.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/sgcluster.yaml
@@ -134,6 +134,15 @@ spec:
     disableConnectionPooling: {{ .Values.cluster.pods.disableConnectionPooling }}
     disablePostgresUtil: {{ .Values.cluster.pods.disablePostgresUtil }}
     disableMetricsExporter: {{ .Values.cluster.pods.disableMetricsExporter }}
+    {{- if .Values.cluster.pods.scheduling }}
+    scheduling:
+      {{- if .Values.cluster.pods.scheduling.nodeSelector }}
+      nodeSelector:
+        {{- range $label, $value := .Values.cluster.pods.scheduling.nodeSelector }}
+        {{ $label }}: {{ $value }}
+        {{- end }}
+      {{- end }}
+    {{- end }} 
   {{- if .Values.distributedLogs.enabled }}
   distributedLogs:
     sgDistributedLogs: {{ .Values.cluster.distributedLogs.sgDistributedLogs }}
