--- a/stackgres-k8s/src/api-web/src/main/resources/application.properties
+++ b/stackgres-k8s/src/api-web/src/main/resources/application.properties
@@ -35,6 +35,10 @@ mp.jwt.verify.issuer=https://api.stackgres.io/auth
 smallrye.jwt.verify.aud=api-websecurity
 smallrye.jwt.require.named-principal=true
 
+# Test Authentication
+%test.mp.jwt.verify.publickey.location=jwt/rsa_public.pem
+½test.quarkus.smallrye-jwt.enabled=true
+
 # StackGres Configuration
 stackgres.operatorName=${stackgres.operatorName}
 stackgres.operatorVersion=${stackgres.operatorVersion}
