--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,6 +69,19 @@ build:
       junit:
         - stackgres-k8s/src/*/target/surefire-reports/TEST-*.xml
 
+build ui:
+  image: alpine:3.12
+  stage: build
+  script:
+  - apk add py3-pip jq
+  - pip install yamllint yq
+  - sh -x stackgres-k8s/src/admin-ui/build.sh
+  artifacts:
+    expire_in: 1 week
+    when: always
+    paths:
+    - stackgres-k8s/src/admin-ui/target
+
 build documentation:
   image: monachus/hugo
   stage: build
@@ -246,7 +259,7 @@ build ui image:
   tags:
     - stackgres-runner
   dependencies:
-    - build
+    - build ui
   timeout: 12 hour
   retry: 2
   script:
